Fix white space on dropwdown

--- a/packages/manager-components/src/blocks/Dropdown/styles.css
+++ b/packages/manager-components/src/blocks/Dropdown/styles.css
@@ -7,6 +7,7 @@
 .dropdown__label {
   color: var(--color-grey);
   margin-right: var(--space-s);
+  white-space: nowrap;
 }
 
 .dropdown__wrapper {
